--- a/custom-purple.css
+++ b/custom-purple.css
@@ -1,6 +1,6 @@
 /* Blue */
 .theme-dark {
-  --accent-color: #ef7ff9 !important;
+  --accent-color: #7ff9d3 !important;
   --background-1: #171d20 !important;
   --background-2: #1e2529 !important;
   --border-color: #273034 !important;
