--- a/midnight-discord-theme.css
+++ b/midnight-discord-theme.css
@@ -167,20 +167,7 @@
 	visibility: hidden;
 }
 
-/* top corner title */
-.wordmarkWindows-2dq6rw::after {
-	content: 'Discord';
-	text-shadow: none;
-	display: block;
-	position: relative;
-	width: 200px;
-	height: 16px;
-	line-height: 16px;
-	font-family: var(--font-headline);
-	font-size: 11px;
-	font-weight: 600;
-	color: var(--accent-color);
-}
+
 
 /* base color variables */
 .theme-dark {
@@ -566,6 +553,11 @@
 
 
 /* top corner title */
+.wordmarkWindows-2dq6rw svg {
+	display: none;
+}
+
+
 .wordmarkWindows-2dq6rw::after {
 	content: 'Discord';
 	display: block;
@@ -578,4 +570,3 @@
 	font-weight: 600;
 	color: var(--accent-color);
 }
-
