--- a/midnight-discord-theme.css
+++ b/midnight-discord-theme.css
@@ -557,6 +557,13 @@
 	display: none;
 }
 
+.withFrame-2dL45i {
+	height: 20px;
+}
+.typeWindows-2-g3UY > svg {
+	display: none;
+}
+
 
 .wordmarkWindows-2dq6rw::after {
 	content: 'Discord';
