--- a/midnight-discord-theme.css
+++ b/midnight-discord-theme.css
@@ -573,6 +573,7 @@
 	height: 16px;
 	line-height: 16px;
 	font-family: var(--font-headline);
+	text-shadow: none;
 	font-size: 11px;
 	font-weight: 600;
 	color: var(--accent-color);
