--- a/midnight-discord-theme.css
+++ b/midnight-discord-theme.css
@@ -573,7 +573,7 @@
 	height: 16px;
 	line-height: 16px;
 	font-family: var(--font-headline);
-	text-shadow: none;
+	text-shadow: 0 0 2px #000000;
 	font-size: 11px;
 	font-weight: 600;
 	color: var(--accent-color);
