--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -188,6 +188,11 @@
 	transition: 0.15s;
 }
 
+.avatarSpeaking-36V2PN {
+    box-shadow: inset 0 0 0 2px var(--accent-color) !important;
+}
+
+
 
 /* Sliding effect in settings menu */
 
