--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -206,7 +206,16 @@
     color: var(--accent-color);
 }
 
-
+/*Connection quality bars*/
+.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+    color: var(--accent-color);
+}
+.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+    color: var(--accent-color);
+}
+.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+    color: var(--accent-color);
+}
 
 /* Sliding effect in settings menu */
 
