fixed connectivity bar color

--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -207,13 +207,13 @@
 }
 
 /*Connection quality bars*/
-.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
     color: var(--accent-color);
 }
-.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
     color: var(--accent-color);
 }
-.rtcConnectionQualityFine-3zZrSa .ping-2IpLcU .pingForeground-1BRBTc {
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
     color: var(--accent-color);
 }
 
