voice channel user when clicked on highlight fix

--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -58,7 +58,7 @@
 /* voice channel user name when clicked on */
 
 
-.listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
+.listDefault__205d0 .clickable__137bc.selected__471ca .content_b60865 {
 	text-shadow: 0 0 5px hsl(0, 0%, 100%);
 }
 
