--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -207,39 +207,40 @@
 	transition: 0.15s;
 }
 
+/*VC Connection quality bars*/
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
+    color: var(--accent-color);
+}
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
+    color: var(--accent-color);
+}
+.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
+    color: var(--accent-color);
+}
+
 
 /*streaming, cam, activity buttons left bottom*/
-.buttonActive-1YQBrb {
+.buttonActive__407a7 {
     background-color: var(--accent-color) !important;
 }
-/*add friend button on friend list*/
-#app-mount > div.appAsidePanelWrapper-VeklAl > div.notAppAsidePanel-1yXaPq > div.app-1BipOi > div > div.layers-OrUESM.layers-1YQhyW > div > div > div > div > main > section > div > div.children-3xh0VB > div.tabBar-ra-EuL.topPill-2vcLsa > div.item-3mHhwr.addFriend-emTWY1.item-2GWPIy.themed-qqoYp3 {
+
+/* Add friend button */
+#app-mount > div.appAsidePanelWrapper__714a6 > div.notAppAsidePanel__9d124 > div.app_b1f720 > div > div.layers__1c917.layers_a23c37 > div > div > div > div > main > section > div > div.children__32014 > div.tabBar__73938.topPill__0cdf1 > div.item_e4ca95.addFriend__80542.item__48dda.themed_b957e8 {
     background-color: hsl(190, 100%, 29%);
 }
 
 /*Voice Connected Text bottom left*/
-#app-mount > div.appAsidePanelWrapper-VeklAl > div.notAppAsidePanel-1yXaPq > div.app-1BipOi > div > div.layers-OrUESM.layers-1YQhyW > div > div > div > div > div.sidebar-1tnWFu > section > div.wrapper-VSquwh > div > div.flex-2S1XBF.horizontal-112GEH.justifyStart-2Mwniq.alignCenter-14kD11.noWrap-hBpHBz.connection-3wznVd > div.inner-C_MH0f > div > div > div > button > div {
-    color: var(--accent-color);
-}
-
-/*Connection quality bars*/
-.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
-    color: var(--accent-color);
-}
-.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
-    color: var(--accent-color);
-}
-.rtcConnectionQualityFine__471b6 .ping__47992 .pingForeground_ac78df {
+#app-mount > div.appAsidePanelWrapper__714a6 > div.notAppAsidePanel__9d124 > div.app_b1f720 > div > div.layers__1c917.layers_a23c37 > div > div > div > div > div > section > div.wrapper__0ed4a > div > div.flex_f5fbb7.horizontal__992f6.justifyStart__42744.alignCenter__84269.noWrap__5c413.connection__5bb32 > div.inner_ab95dc > div > div > div > button > div {
     color: var(--accent-color);
 }
 
 /* Sliding effect in settings menu */
 
-.side-2ur1Qk .item-3XjbnG.themed-2-lozF {
+.side_b4b3f6 .item__48dda.themed_b957e8 {
 	transition: 0.5s;
 }
 
-.side-2ur1Qk .item-3XjbnG.themed-2-lozF:hover {
+.side_b4b3f6 .item__48dda.themed_b957e8:hover {
 	transform: translate(4px, 0px) !important;
 	transition: 0.15s;
 }
