--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -274,6 +274,26 @@
     background-color: var(--accent-color);
 } 
 
+/* For new message divider */
+/* Text date mark without unread */
+.content_d67847 {
+    color: var(--accent-color);
+}
+
+/* Text date mark with unread */
+.isUnread__6f880 .content_d67847 {
+    color: var(--accent-color);
+}
+
+/* friend top bar in dark */
+.theme-dark .themed_b152d4 {
+    background-color: rgb(13, 14, 18);
+}
+
+/* forum background for forums */
+.container_b181b6 {
+    background-color: rgb(13, 14, 18);
+}
 
 /* .username-u-ebrn.desaturateUserColors-1O-G89 {
 	font-size: 200%;
