--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -100,6 +100,11 @@
 	transition: 0.3s;
 }
 
+/* speaking cicle in private calls */
+.border_e782de.speaking__1dd69 {
+    box-shadow: inset 0 0 0 2px var(--accent-color),inset 0 0 0 3px var(--background-floating)
+}
+
 /* when voice channel selected, square avatars */
 .border_d9a17b {
 	transition: 0.3s;
